# nrf52-baseproject

./: CMakeLists.txt  README.md  gcc_nrf52.ld
cmake-nRF5x/: CMake_nRF5x.cmake
src/: CMakeLists.txt  main.cpp  sdk_config.h
